# goldendict

./: .gitignore  CMakeLists.txt  README.md  articleview.cc  config.cc
.github/workflows/: rebase.yml
locale/: ar_SA.ts  ar_SA.ts.orig  ay_WI.ts  be_BY.ts  be_BY@latin.ts  be_BY_BACKUP_4947.ts  be_BY_BASE_4947.ts  be_BY_LOCAL_4947.ts  be_BY_REMOTE_4947.ts  bg_BG.ts  cs_CZ.ts  de_DE.ts  el_GR.ts  eo_EO.ts  es_AR.ts  es_BO.ts  es_ES.ts  fa_IR.ts  fi_FI.ts  fr_FR.ts  ie_001.ts  it_IT.ts  ja_JP.ts  ko_KR.ts  lt_LT.ts  mk_MK.ts  nl_NL.ts  pl_PL.ts  pt_BR.ts  qu_WI.ts  ru_RU.ts  sk_SK.ts  sq_AL.ts  sr_SR.ts  sv_SE.ts  tg_TJ.ts  tk_TM.ts  tr_TR.ts  uk_UA.ts  vi_VN.ts  (+2 more)
qmake_to_cmake_log/: diff_moc.txt  goldendict.txt  new_moc.txt  old_moc.txt  yyyy.txt  zzzz.txt
